fix: reduce precision on breakpoint ranges
Fixes issue noticed where too much precision results in the rounded
number of the media query value being used when it shouldn't.

--- a/blocks/ideas/ideas.css
+++ b/blocks/ideas/ideas.css
@@ -120,7 +120,7 @@
 }
 
 /* Appended cards on mobile display differently, including a side-by-side layout. */
-@media (max-width: 31.9999rem) {
+@media not all and (min-width: 32rem) {
   .ideas .grid-item[data-added="true"] {
     grid-column: span 8;
     border-top: 1px solid var(--spectrum-gray-400);
